helm/components/kibana/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kibana-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - kibana.35.238.82.53.nip.io
    - port:
        number: 80
        name: http2
        protocol: HTTP2
      hosts:
        - kibana.35.238.82.53.nip.io
